Updates from Overleaf

--- a/Submitted_PRSA/main.tex
+++ b/Submitted_PRSA/main.tex
@@ -577,7 +577,7 @@ Using the same argument as above, we conclude that this fixed point is also glob
 
 \begin{figure}
 \centering
-\includegraphics[width = 0.99\textwidth]{./figures/fig4_pycnocline_region}
+\includegraphics[width = 0.99\textwidth]{Submitted_PRSA/make_plots/plots/figure4.pdf}
 \caption{Comparison between numerical solutions of the plume equations rescaled to the pycnocline (equations~\eqref{E:PycnoclineRegion:MassFull}--\eqref{E:PycnoclineRegion:ThermalFull}) and their leading order reduction (equations~\eqref{E:PycnoclineRegion:Mass}--\eqref{E:PycnoclineRegion:Themal}). We show (a) plume speed $U$, (b) buoyancy deficit $\Delta \rho$, and (c) thermal driving $\Delta T$. Purple curves correspond to the full equations with $\epsone = 3\times10^{-2}, ~\lt = 5\times10^{-3}$ (i.e. as in table~\ref{T:Dimensionless_Parameters}) and green curves correspond to the leading order equations with $\epsone = 3\times10^{-3},~ \lt = 5\times10^{-4}$ (i.e. both asymptotic parameters reduced by a factor of ten, thus preserving their ratio). Black dashed curves correspond the solution of the leading order equations~\eqref{E:PycnoclineRegion:Mass}--\eqref{E:PycnoclineRegion:Themal}. Also plotted as grey dashed lines are the quantities $f_{\in}$ and $f_{\out}$, for $f = U,~ \Delta \rho, ~\Delta T$ as appropriate (defined in the main text). Solutions here use a constant ice shelf basal slope, $Z_b(X) = X$ and $c_1, c_2, k_3,k_4, \lambda$ have the values listed in table~\ref{T:Dimensionless_Parameters}. The coloured boxes indicate a length $4 \zeta$ across which the majority of the change around $\zeta = 0 $ occurs.}\label{fig:PycnoclineAsymptotics}
 \end{figure}
 
