edits + figure  6 code

--- a/Submitted_PRSA/mybib.bib
+++ b/Submitted_PRSA/mybib.bib
@@ -193,6 +193,12 @@ year = {2014}
   year = {2021}
 }
 
+@misc{Bradley2021,
+    author = {Bradley, A T and Bett, D and De Rydt, J and Dutrieux, P and Holland, P R}
+    title ={{Melt Response to Calving Events in Pine Island Glacier},
+  Year={2021}
+}
+
 @article{Pedersen1980,
 title = {Dense Bottom Currents in Rotating Ocean},
 author = {Pedersen, F B},
@@ -354,6 +360,8 @@ PAGES = {1969--1985}
 }
  
  
+ 
+ B
 @inbook{MacAyeal1985,
 author = {MacAyeal, Douglas R.},
 publisher = {Amer. Geophys. Union},
