Updates from Overleaf

--- a/Submitted_JFM/main.tex
+++ b/Submitted_JFM/main.tex
@@ -225,6 +225,7 @@ in~\eqref{E:Modelling:Model:Closure:mdot}. Similarly, the effective temperature 
 \Delta \rho_i^{\text{ef}} = \rho_0 \left[\beta_S(S_a - S_i) - \beta_T(T_a - T_i^{\text{ef}})\right]  \approx \rho_0 \left[\beta_S(S_a - S_i) - \beta_T\frac{L}{c}\right].
 \end{equation}
 %at this point we have the equations we will work with henceforth (i.e. all the terms here will be retained)
+\red{Maybe add some cavets here about the choice of model c.f. reviewer comments: pure basal freeze on and no frazil ice, use of two equation formulation}
 \subsubsection{Reformulation in terms of buoyancy deficit and thermal driving}
 Inserting the turbulent flux terms~\eqref{E:Modelling:Model:TurbulentSalt}--\eqref{E:Modelling:Model:TurbulentShear}, the entrainment parametrization~\eqref{E:Modelling:Model:Entrainment}, the heat and salt balances~\eqref{E:Modelling:Model:Closure:3eqn1}--\eqref{E:Modelling:Model:Closure:3eqn2}, and the melt rate relation~\eqref{E:Modelling:Model:Closure:M0_simple} into the conservation equations~\eqref{E:Modelling:Model:RawMass}--\eqref{E:Modelling:Model:RawTemp} gives a system of equations that can be rearranged to be expressed as conservation equations for fluxes of mass, momentum, buoyancy deficit, and thermal driving. Using the approximations~\eqref{E:Modelling:Model:Closure:M0_simple} and~\eqref{E:Modelling:Model:EffectiveDensity}, this system of equations reads
 \begin{align}
