--- a/Submitted_PRSA/mybib.bib
+++ b/Submitted_PRSA/mybib.bib
@@ -193,10 +193,11 @@ year = {2014}
   year = {2021}
 }
 
-@misc{Bradley2021,
-    author = {Bradley, A T and Bett, D and De Rydt, J and Dutrieux, P and Holland, P R}
-    title ={{Melt Response to Calving Events in Pine Island Glacier},
-  Year={2021}
+@article{Bradley2021,
+    title ={Melt Response to Calving Events in Pine Island Glacier},
+    author = {Bradley, A. T. and Bett, D. and De Rydt, J. and Dutrieux, P. and Holland, P. R.},
+    year={2021},
+    journal={}
 }
 
 @article{Pedersen1980,
