Updates from Overleaf

--- a/Submitted_PRSA/mybib.bib
+++ b/Submitted_PRSA/mybib.bib
@@ -22,7 +22,7 @@ year = {2016}
 @article{McPhee1999JPhysOcean,
     author = {McPhee, M G and Kottmeier, C and Morison, J H},
     title = "{Ocean Heat Flux in the Central Weddell Sea during Winter}",
-    journal = {J. Phys. Oceanogrx},
+    journal = {J. Phys. Oceanogr.},
     volume = {29},
     number = {6},
     pages = {1166-1179},
@@ -69,6 +69,16 @@ year = {1991}
   number={10},
   pages={733--738},
   year={2018}
+}
+
+@article{Jenkins1995,
+  title={Modeling the effects of frazil ice crystals on the dynamics and thermodynamics of ice shelf water plumes},
+  author={Jenkins, A and Bombosch, A},
+  journal={J. Geophys. Res. Oceans},
+  volume={100},
+  number={C4},
+  pages={6967--6981},
+  year={1995},
 }
 
 @article{Silvano2016Oceanography,
@@ -129,6 +139,16 @@ year = {1991}
   number={23},
   year={2004}
   }
+  
+ @article{jenkins2021JPO,
+  title={Shear, Stability, and Mixing within the Ice Shelf--Ocean Boundary Current},
+  author={Jenkins, A},
+  journal={J. Phys. Oceanogr.},
+  volume={51},
+  number={7},
+  pages={2129--2148},
+  year={2021}
+}
 
 @article{Favier2019GeosciModDev,
   title={Assessment of sub-shelf melting parameterisations using the ocean--ice-sheet coupled model NEMO (v3. 6)--Elmer/Ice (v8. 3)},
@@ -188,7 +208,6 @@ year = {2014}
 @misc{PycnoclineCode,
   title = {Subglacial Plume Modelling Code},
   howpublished = {\url{https://github.com/alextbradley/Pycnocline_modelling}},
-  note = {Accessed: 2021-02-02},
   author = {Bradley, A. T.},
   year = {2021}
 }
@@ -360,9 +379,17 @@ NUMBER = {6},
 PAGES = {1969--1985}
 }
  
- 
- 
- B
+ @article{ReesJones2018Cryo,
+  title={Frazil-ice growth rate and dynamics in mixed layers and sub-ice-shelf plumes},
+  author={Rees Jones, D W and Wells, A J},
+  journal={The Cryosphere},
+  volume={12},
+  number={1},
+  pages={25--38},
+  year={2018},
+}
+
+
 @inbook{MacAyeal1985,
 author = {MacAyeal, Douglas R.},
 publisher = {Amer. Geophys. Union},
@@ -386,7 +413,7 @@ year = {1985},
 @article{Kimura2014JPhysOcean,
   title={The effect of meltwater plumes on the melting of a vertical glacier face},
   author={Kimura, S. and Holland, P. R. and Jenkins, A. and Piggott, M.},
-  journal={J. Phys. Ocean.},
+  journal={J. Phys. Oceanogr.},
   volume={44},
   number={12},
   pages={3099--3117},
